--- a/META.yml
+++ b/META.yml
@@ -1,9 +1,14 @@
-name:                Geo-Forward
-version:             0.06
-version_from:        lib/Geo/Forward.pm
-abstract:            Perl version of forward calculations
-license:             perl
-distribution_type:   module
-requires:     
-    vars:                          0
+# http://module-build.sourceforge.net/META-spec.html
+#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
+name:         Geo-Forward
+version:      0.07
+version_from: lib/Geo/Forward.pm
+installdirs:  site
+requires:
+    constant:                      0
+    Geo::Ellipsoids:               0.06
     strict:                        0
+    vars:                          0
+
+distribution_type: module
+generated_by: ExtUtils::MakeMaker version 6.17
