--- a/META.yml
+++ b/META.yml
@@ -1,12 +1,14 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Geo-Forward
-version:      0.08
+version:      0.09
 version_from: lib/Geo/Forward.pm
 installdirs:  site
 requires:
     constant:                      0
+    Geo::Constants:                0.02
     Geo::Ellipsoids:               0.06
+    Geo::Functions:                0.02
     strict:                        0
     vars:                          0
 
