--- a/META.yml
+++ b/META.yml
@@ -1,16 +1,16 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         Geo-Forward
-version:      0.11
-version_from: lib/Geo/Forward.pm
-installdirs:  site
-requires:
-    constant:                      0
+--- #YAML:1.0
+name:                Geo-Forward
+version:             0.12
+abstract:            Calculate geographic location from lat, lon, distance, and heading.
+license:             ~
+author:              ~
+generated_by:        ExtUtils::MakeMaker version 6.42
+distribution_type:   module
+requires:     
     Geo::Constants:                0.04
     Geo::Ellipsoids:               0.09
     Geo::Functions:                0.03
-    strict:                        0
-    vars:                          0
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.17
+    Test::Simple:                  0.44
+meta-spec:
+    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
+    version: 1.3
